
classpath_java_sources = files(
  'avian/Addendum.java',
  'avian/AnnotationInvocationHandler.java',
  'avian/Assembler.java',
  'avian/Atomic.java',
  'avian/avianvmresource/Handler.java',
  'avian/Callback.java',
  'avian/Cell.java',
  'avian/ClassAddendum.java',
  'avian/Classes.java',
  'avian/Code.java',
  'avian/ConstantPool.java',
  'avian/Continuations.java',
  'avian/Data.java',
  'avian/FieldAddendum.java',
  'avian/file/Handler.java',
  'avian/FormatString.java',
  'avian/Function.java',
  'avian/http/Handler.java',
  'avian/IncompatibleContinuationException.java',
  'avian/InnerClassReference.java',
  'avian/Iso88591.java',
  'avian/jar/Handler.java',
  'avian/LegacyObjectInputStream.java',
  'avian/LegacyObjectOutputStream.java',
  'avian/Machine.java',
  'avian/MethodAddendum.java',
  'avian/Pair.java',
  'avian/PersistentSet.java',
  'avian/Singleton.java',
  'avian/Stream.java',
  'avian/SystemClassLoader.java',
  'avian/Traces.java',
  'avian/Utf8.java',
  'avian/VMClass.java',
  'avian/VMField.java',
  'avian/VMMethod.java',
  'dalvik/system/BaseDexClassLoader.java',
  'java/io/BufferedInputStream.java',
  'java/io/BufferedOutputStream.java',
  'java/io/BufferedReader.java',
  'java/io/BufferedWriter.java',
  'java/io/ByteArrayInputStream.java',
  'java/io/ByteArrayOutputStream.java',
  'java/io/Closeable.java',
  'java/io/DataInput.java',
  'java/io/DataInputStream.java',
  'java/io/DataOutput.java',
  'java/io/DataOutputStream.java',
  'java/io/EOFException.java',
  'java/io/Externalizable.java',
  'java/io/File.java',
  'java/io/FileDescriptor.java',
  'java/io/FileInputStream.java',
  'java/io/FilenameFilter.java',
  'java/io/FileNotFoundException.java',
  'java/io/FileOutputStream.java',
  'java/io/FileReader.java',
  'java/io/FileWriter.java',
  'java/io/FilterInputStream.java',
  'java/io/FilterOutputStream.java',
  'java/io/FilterReader.java',
  'java/io/Flushable.java',
  'java/io/InputStream.java',
  'java/io/InputStreamReader.java',
  'java/io/IOException.java',
  'java/io/LineNumberReader.java',
  'java/io/NotSerializableException.java',
  'java/io/ObjectInput.java',
  'java/io/ObjectInputStream.java',
  'java/io/ObjectOutput.java',
  'java/io/ObjectOutputStream.java',
  'java/io/ObjectStreamException.java',
  'java/io/OutputStream.java',
  'java/io/OutputStreamWriter.java',
  'java/io/PrintStream.java',
  'java/io/PrintWriter.java',
  'java/io/PushbackReader.java',
  'java/io/RandomAccessFile.java',
  'java/io/Reader.java',
  'java/io/Serializable.java',
  'java/io/StreamCorruptedException.java',
  'java/io/StringReader.java',
  'java/io/StringWriter.java',
  'java/io/UnsupportedEncodingException.java',
  'java/io/UTFDataFormatException.java',
  'java/io/Writer.java',
  'java/lang/AbstractMethodError.java',
  'java/lang/annotation/Annotation.java',
  'java/lang/annotation/ElementType.java',
  'java/lang/annotation/Retention.java',
  'java/lang/annotation/RetentionPolicy.java',
  'java/lang/annotation/Target.java',
  'java/lang/Appendable.java',
  'java/lang/ArithmeticException.java',
  'java/lang/ArrayIndexOutOfBoundsException.java',
  'java/lang/ArrayStoreException.java',
  'java/lang/AssertionError.java',
  'java/lang/AutoCloseable.java',
  'java/lang/Boolean.java',
  'java/lang/Byte.java',
  'java/lang/Character.java',
  'java/lang/CharSequence.java',
  'java/lang/Class.java',
  'java/lang/ClassCastException.java',
  'java/lang/ClassLoader.java',
  'java/lang/ClassNotFoundException.java',
  'java/lang/Cloneable.java',
  'java/lang/CloneNotSupportedException.java',
  'java/lang/Comparable.java',
  'java/lang/Deprecated.java',
  'java/lang/Double.java',
  'java/lang/Enum.java',
  'java/lang/Error.java',
  'java/lang/Exception.java',
  'java/lang/ExceptionInInitializerError.java',
  'java/lang/Float.java',
  'java/lang/IllegalAccessError.java',
  'java/lang/IllegalAccessException.java',
  'java/lang/IllegalArgumentException.java',
  'java/lang/IllegalMonitorStateException.java',
  'java/lang/IllegalStateException.java',
  'java/lang/IllegalThreadStateException.java',
  'java/lang/IncompatibleClassChangeError.java',
  'java/lang/IndexOutOfBoundsException.java',
  'java/lang/InheritableThreadLocal.java',
  'java/lang/InstantiationError.java',
  'java/lang/InstantiationException.java',
  'java/lang/Integer.java',
  'java/lang/InternalError.java',
  'java/lang/InterruptedException.java',
  'java/lang/invoke/CallSite.java',
  'java/lang/invoke/LambdaConversionException.java',
  'java/lang/invoke/LambdaMetafactory.java',
  'java/lang/invoke/MethodHandle.java',
  'java/lang/invoke/MethodHandles.java',
  'java/lang/invoke/MethodType.java',
  'java/lang/Iterable.java',
  'java/lang/LinkageError.java',
  'java/lang/Long.java',
  'java/lang/Math.java',
  'java/lang/NegativeArraySizeException.java',
  'java/lang/NoClassDefFoundError.java',
  'java/lang/NoSuchFieldError.java',
  'java/lang/NoSuchFieldException.java',
  'java/lang/NoSuchMethodError.java',
  'java/lang/NoSuchMethodException.java',
  'java/lang/NullPointerException.java',
  'java/lang/Number.java',
  'java/lang/NumberFormatException.java',
  'java/lang/Object.java',
  'java/lang/OutOfMemoryError.java',
  'java/lang/Override.java',
  'java/lang/Package.java',
  'java/lang/Process.java',
  'java/lang/Readable.java',
  'java/lang/ref/PhantomReference.java',
  'java/lang/ref/Reference.java',
  'java/lang/ref/ReferenceQueue.java',
  'java/lang/ref/SoftReference.java',
  'java/lang/ref/WeakReference.java',
  'java/lang/reflect/AccessibleObject.java',
  'java/lang/reflect/AnnotatedElement.java',
  'java/lang/reflect/Array.java',
  'java/lang/reflect/Constructor.java',
  'java/lang/reflect/Field.java',
  'java/lang/reflect/GenericDeclaration.java',
  'java/lang/reflect/InvocationHandler.java',
  'java/lang/reflect/InvocationTargetException.java',
  'java/lang/reflect/Member.java',
  'java/lang/reflect/Method.java',
  'java/lang/reflect/Modifier.java',
  'java/lang/reflect/ParameterizedType.java',
  'java/lang/reflect/Proxy.java',
  'java/lang/reflect/SignatureParser.java',
  'java/lang/reflect/Type.java',
  'java/lang/reflect/TypeVariable.java',
  'java/lang/ReflectiveOperationException.java',
  'java/lang/Runnable.java',
  'java/lang/Runtime.java',
  'java/lang/RuntimeException.java',
  'java/lang/RuntimePermission.java',
  'java/lang/SecurityException.java',
  'java/lang/SecurityManager.java',
  'java/lang/Short.java',
  'java/lang/StackOverflowError.java',
  'java/lang/StackTraceElement.java',
  'java/lang/String.java',
  'java/lang/StringBuffer.java',
  'java/lang/StringBuilder.java',
  'java/lang/StringIndexOutOfBoundsException.java',
  'java/lang/SuppressWarnings.java',
  'java/lang/System.java',
  'java/lang/Thread.java',
  'java/lang/ThreadDeath.java',
  'java/lang/ThreadGroup.java',
  'java/lang/ThreadLocal.java',
  'java/lang/Throwable.java',
  'java/lang/TypeNotPresentException.java',
  'java/lang/UnsatisfiedLinkError.java',
  'java/lang/UnsupportedOperationException.java',
  'java/lang/VirtualMachineError.java',
  'java/lang/Void.java',
  'java/math/BigInteger.java',
  'java/math/MathContext.java',
  'java/math/RoundingMode.java',
  'java/net/BindException.java',
  'java/net/DatagramSocket.java',
  'java/net/InetAddress.java',
  'java/net/InetSocketAddress.java',
  'java/net/JarURLConnection.java',
  'java/net/MalformedURLException.java',
  'java/net/ProtocolFamily.java',
  'java/net/ServerSocket.java',
  'java/net/Socket.java',
  'java/net/SocketAddress.java',
  'java/net/SocketException.java',
  'java/net/StandardProtocolFamily.java',
  'java/net/UnknownHostException.java',
  'java/net/UnknownServiceException.java',
  'java/net/URL.java',
  'java/net/URLClassLoader.java',
  'java/net/URLConnection.java',
  'java/net/URLStreamHandler.java',
  'java/nio/ArrayByteBuffer.java',
  'java/nio/ArrayCharBuffer.java',
  'java/nio/Buffer.java',
  'java/nio/BufferOverflowException.java',
  'java/nio/BufferUnderflowException.java',
  'java/nio/ByteBuffer.java',
  'java/nio/ByteOrder.java',
  'java/nio/channels/Channel.java',
  'java/nio/channels/Channels.java',
  'java/nio/channels/ClosedSelectorException.java',
  'java/nio/channels/DatagramChannel.java',
  'java/nio/channels/FileChannel.java',
  'java/nio/channels/GatheringByteChannel.java',
  'java/nio/channels/ReadableByteChannel.java',
  'java/nio/channels/SelectableChannel.java',
  'java/nio/channels/SelectionKey.java',
  'java/nio/channels/Selector.java',
  'java/nio/channels/ServerSocketChannel.java',
  'java/nio/channels/SocketChannel.java',
  'java/nio/channels/SocketSelector.java',
  'java/nio/channels/UnsupportedAddressTypeException.java',
  'java/nio/channels/WritableByteChannel.java',
  'java/nio/CharBuffer.java',
  'java/nio/DirectByteBuffer.java',
  'java/nio/FixedArrayByteBuffer.java',
  'java/nio/ReadOnlyBufferException.java',
  'java/security/AccessControlException.java',
  'java/security/AccessController.java',
  'java/security/AllPermission.java',
  'java/security/BasicPermission.java',
  'java/security/cert/Certificate.java',
  'java/security/CodeSource.java',
  'java/security/Permission.java',
  'java/security/PermissionCollection.java',
  'java/security/Permissions.java',
  'java/security/PrivilegedAction.java',
  'java/security/ProtectionDomain.java',
  'java/security/SecurityPermission.java',
  'java/text/DateFormatSymbols.java',
  'java/text/FieldPosition.java',
  'java/text/Format.java',
  'java/text/MessageFormat.java',
  'java/text/ParseException.java',
  'java/text/ParsePosition.java',
  'java/text/SimpleDateFormat.java',
  'java/util/AbstractCollection.java',
  'java/util/AbstractDeque.java',
  'java/util/AbstractList.java',
  'java/util/AbstractMap.java',
  'java/util/AbstractQueue.java',
  'java/util/AbstractSequentialList.java',
  'java/util/AbstractSet.java',
  'java/util/ArrayDeque.java',
  'java/util/ArrayList.java',
  'java/util/Arrays.java',
  'java/util/BitSet.java',
  'java/util/Calendar.java',
  'java/util/Collection.java',
  'java/util/Collections.java',
  'java/util/Comparator.java',
  'java/util/concurrent/atomic/AtomicBoolean.java',
  'java/util/concurrent/atomic/AtomicInteger.java',
  'java/util/concurrent/atomic/AtomicLong.java',
  'java/util/concurrent/atomic/AtomicReference.java',
  'java/util/concurrent/atomic/AtomicReferenceArray.java',
  'java/util/concurrent/BlockingDeque.java',
  'java/util/concurrent/BlockingQueue.java',
  'java/util/concurrent/Callable.java',
  'java/util/concurrent/CancellationException.java',
  'java/util/concurrent/CompletionService.java',
  'java/util/concurrent/ConcurrentHashMap.java',
  'java/util/concurrent/ConcurrentLinkedQueue.java',
  'java/util/concurrent/ConcurrentMap.java',
  'java/util/concurrent/Delayed.java',
  'java/util/concurrent/ExecutionException.java',
  'java/util/concurrent/Executor.java',
  'java/util/concurrent/ExecutorCompletionService.java',
  'java/util/concurrent/Executors.java',
  'java/util/concurrent/ExecutorService.java',
  'java/util/concurrent/Future.java',
  'java/util/concurrent/FutureTask.java',
  'java/util/concurrent/LinkedBlockingQueue.java',
  'java/util/concurrent/locks/Condition.java',
  'java/util/concurrent/locks/Lock.java',
  'java/util/concurrent/locks/LockSupport.java',
  'java/util/concurrent/locks/ReadWriteLock.java',
  'java/util/concurrent/RejectedExecutionException.java',
  'java/util/concurrent/RunnableFuture.java',
  'java/util/concurrent/ScheduledExecutorService.java',
  'java/util/concurrent/ScheduledFuture.java',
  'java/util/concurrent/ThreadFactory.java',
  'java/util/concurrent/TimeoutException.java',
  'java/util/concurrent/TimeUnit.java',
  'java/util/ConcurrentModificationException.java',
  'java/util/Date.java',
  'java/util/Deque.java',
  'java/util/EmptyStackException.java',
  'java/util/Enumeration.java',
  'java/util/EnumSet.java',
  'java/util/EventListener.java',
  'java/util/EventObject.java',
  'java/util/Formatter.java',
  'java/util/HashMap.java',
  'java/util/HashSet.java',
  'java/util/Hashtable.java',
  'java/util/IdentityHashMap.java',
  'java/util/IllegalFormatException.java',
  'java/util/Iterator.java',
  'java/util/jar/Attributes.java',
  'java/util/jar/JarEntry.java',
  'java/util/jar/JarFile.java',
  'java/util/LinkedHashMap.java',
  'java/util/LinkedHashSet.java',
  'java/util/LinkedList.java',
  'java/util/List.java',
  'java/util/ListIterator.java',
  'java/util/Locale.java',
  'java/util/logging/Handler.java',
  'java/util/logging/Level.java',
  'java/util/logging/Logger.java',
  'java/util/logging/LogRecord.java',
  'java/util/Map.java',
  'java/util/MissingResourceException.java',
  'java/util/NavigableMap.java',
  'java/util/NoSuchElementException.java',
  'java/util/Objects.java',
  'java/util/Observable.java',
  'java/util/Observer.java',
  'java/util/Properties.java',
  'java/util/PropertyResourceBundle.java',
  'java/util/Queue.java',
  'java/util/Random.java',
  'java/util/RandomAccess.java',
  'java/util/regex/CharacterMatcher.java',
  'java/util/regex/Compiler.java',
  'java/util/regex/Matcher.java',
  'java/util/regex/Pattern.java',
  'java/util/regex/PikeVM.java',
  'java/util/regex/PikeVMOpcodes.java',
  'java/util/regex/RegexMatcher.java',
  'java/util/regex/RegexPattern.java',
  'java/util/regex/TrivialMatcher.java',
  'java/util/regex/TrivialPattern.java',
  'java/util/ResourceBundle.java',
  'java/util/Set.java',
  'java/util/SortedMap.java',
  'java/util/SortedSet.java',
  'java/util/Stack.java',
  'java/util/StringTokenizer.java',
  'java/util/TimeZone.java',
  'java/util/TreeMap.java',
  'java/util/TreeSet.java',
  'java/util/UUID.java',
  'java/util/Vector.java',
  'java/util/WeakHashMap.java',
  'java/util/zip/CRC32.java',
  'java/util/zip/DataFormatException.java',
  'java/util/zip/Deflater.java',
  'java/util/zip/DeflaterOutputStream.java',
  'java/util/zip/Inflater.java',
  'java/util/zip/InflaterInputStream.java',
  'java/util/zip/ZipEntry.java',
  'java/util/zip/ZipFile.java',
  'java/util/zip/ZipOutputStream.java',
  'libcore/reflect/AnnotationAccess.java',
  'sun/misc/Cleaner.java',
  'sun/misc/Unsafe.java',
  'sun/reflect/ConstantPool.java',
)
